--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    needs: [analyze, test, golangci]
+    name: Go Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v4
