--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,13 @@
 name: Build
 
-on:
-  workflow_call:
+runs:
+  steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
+      with:
+        go-version: 1.20.x
+    - uses: actions/checkout@v3
+    - run: go build ./...
 
-jobs:
-  build:
-    name: Go Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-go@v4
-        with:
-          go-version: 1.20.x
-      - uses: actions/checkout@v3
-      - run: go build ./...
+
