--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 name: Build
-
 runs:
   steps:
     - name: Checkout repository
@@ -7,7 +6,6 @@ runs:
     - uses: actions/setup-go@v4
       with:
         go-version: 1.20.x
+#        cache: true
     - uses: actions/checkout@v3
     - run: go build ./...
-
-
