--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,9 @@
 name: Lint
-
 runs:
   steps:
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.20.x'
+        go-version: 1.20.x
         cache: false
     - uses: actions/checkout@v3
     - name: golangci-lint
