--- a/jobs/.github/workflows/go-package.yml
+++ b/jobs/.github/workflows/go-package.yml
@@ -3,13 +3,9 @@ on:
   workflow_dispatch:
 jobs:
   ci-workflow:
-    strategy:
-      matrix:
-        go-version: [ 1.20.2 ]
-        os: [ ubuntu-latest ]
-    name: Go Test (Go ${{ matrix.go-version }} on ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
+    name: ci-workflow
+    runs-on: ubuntu-latest
     steps:
-      - run: calebtraceyco/devops/.github/workflows/go-test.yml
-      - run: calebtraceyco/devops/.github/workflows/go-lint.yml
-      - run: calebtraceyco/devops/.github/workflows/codeql.yml
+      - run: calebtraceyco/devops/templates/.github/workflows/go-test.yml
+      - run: calebtraceyco/devops/templates/.github/workflows/go-lint.yml
+      - run: calebtraceyco/devops/templates/.github/workflows/codeql.yml
