--- a/templates/.github/workflows/go-lint.yml
+++ b/templates/.github/workflows/go-lint.yml
@@ -1,12 +1,11 @@
 name: go-lint
+permissions:
+  contents: read
+  pull-requests: read
 jobs:
   lint:
     name: Go Lint
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
     steps:
       - uses: actions/setup-go@v4
         with:
