--- a/templates/.github/workflows/go-lint.yml
+++ b/templates/.github/workflows/go-lint.yml
@@ -7,6 +7,7 @@ jobs:
     name: Go Lint
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
           go-version: 1.20.2
