--- a/.github/workflows/go-package.yml
+++ b/.github/workflows/go-package.yml
@@ -2,10 +2,9 @@ name: Go Package Workflow
 on:
   workflow_call:
 jobs:
-  ci-workflow:
-    name: ci-workflow
-    runs-on: ubuntu-latest
-    steps:
-      - run: .././.github/templates/go-test.yml
-      - run: .././.github/templates/go-lint.yml
-      - run: .././.github/templates/codeql.yml
+  test:
+    uses: calebtraceyco/devops/.github/templates/go-test.yml
+  lint:
+    uses: calebtraceyco/devops/.github/templates/go-lint.yml
+  analyze:
+    uses: calebtraceyco/devops/.github/templates/codeql.yml
